UIデザインをプレミアムなモダンデザインに全面リニューアル
- カラーパレットをインスタ風グラデーション（紫→ピンク→オレンジ）に変更
- Glassmorphism（半透明ガラス効果）をカード・ヘッダーに適用
- アニメーション付きグラデーションメッシュ背景を追加
- マイクロアニメーション強化（ホバー、シマー、スプリングイージング等）
- ステッパーインジケーター（1→2→3進捗表示）を新設
- ヘッダーに装飾用浮遊オーブ要素を追加
- 機能変更なし

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <body>
     <div class="container">
         <header class="md-header">
+            <div class="header-decor"></div>
+            <div class="header-decor"></div>
             <div class="header-content">
                 <div class="header-branding">
                     <div class="header-icon">
@@ -57,6 +59,24 @@
                 </div>
             </div>
         </header>
+
+        <!-- ステッパーインジケーター -->
+        <div class="stepper-indicator" id="stepperIndicator">
+            <div class="stepper-step active" data-step="1">
+                <div class="stepper-dot">1</div>
+                <span class="stepper-label">入力</span>
+            </div>
+            <div class="stepper-connector" data-connector="1"></div>
+            <div class="stepper-step" data-step="2">
+                <div class="stepper-dot">2</div>
+                <span class="stepper-label">デザイン選択</span>
+            </div>
+            <div class="stepper-connector" data-connector="2"></div>
+            <div class="stepper-step" data-step="3">
+                <div class="stepper-dot">3</div>
+                <span class="stepper-label">生成</span>
+            </div>
+        </div>
 
         <!-- APIキー設定ダイアログ -->
         <md-dialog id="apiModal">
