設定画面にデザインバリエーション選択チェックボックスを追加（最低1つ最大5つ）

--- a/index.html
+++ b/index.html
@@ -51,6 +51,53 @@
                     </div>
                 </div>
 
+                <div class="setting-group">
+                    <label>生成するデザイン案</label>
+                    <p class="setting-desc">生成するデザインバリエーションを選択（最低1つ）</p>
+                    <div class="variation-options">
+                        <label class="variation-option">
+                            <input type="checkbox" name="designVariation" value="A" checked>
+                            <span class="variation-box">
+                                <span class="variation-check">✓</span>
+                                <span class="variation-name">A</span>
+                                <span class="variation-desc">シンプル</span>
+                            </span>
+                        </label>
+                        <label class="variation-option">
+                            <input type="checkbox" name="designVariation" value="B" checked>
+                            <span class="variation-box">
+                                <span class="variation-check">✓</span>
+                                <span class="variation-name">B</span>
+                                <span class="variation-desc">鉛筆イラスト</span>
+                            </span>
+                        </label>
+                        <label class="variation-option">
+                            <input type="checkbox" name="designVariation" value="C" checked>
+                            <span class="variation-box">
+                                <span class="variation-check">✓</span>
+                                <span class="variation-name">C</span>
+                                <span class="variation-desc">親しみやすい</span>
+                            </span>
+                        </label>
+                        <label class="variation-option">
+                            <input type="checkbox" name="designVariation" value="D" checked>
+                            <span class="variation-box">
+                                <span class="variation-check">✓</span>
+                                <span class="variation-name">D</span>
+                                <span class="variation-desc">マーカー</span>
+                            </span>
+                        </label>
+                        <label class="variation-option">
+                            <input type="checkbox" name="designVariation" value="E" checked>
+                            <span class="variation-box">
+                                <span class="variation-check">✓</span>
+                                <span class="variation-name">E</span>
+                                <span class="variation-desc">手書き風</span>
+                            </span>
+                        </label>
+                    </div>
+                </div>
+
                 <div class="modal-buttons">
                     <button id="saveApiKey" class="btn btn-primary">保存</button>
                     <button id="closeModal" class="btn btn-secondary">キャンセル</button>
