--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
                 </div>
 
                 <div class="setting-group">
+                    <label>完了通知</label>
+                    <p class="setting-desc">Batchモード完了時にブラウザ通知を表示します（ブラウザ許可が必要）</p>
+                    <label class="notify-toggle">
+                        <input type="checkbox" id="batchNotifyEnabled" checked>
+                        <span>ブラウザ通知を有効にする</span>
+                    </label>
+                </div>
+
+                <div class="setting-group">
                     <label>生成するデザイン案</label>
                     <p class="setting-desc">生成するデザインバリエーションを選択（最低1つ）</p>
                     <div class="variation-options">
@@ -298,6 +307,7 @@
             <div class="success-content">
                 <span class="success-icon">✅</span>
                 <p id="successMessage"></p>
+                <button id="successActionBtn" class="btn btn-primary btn-small hidden">結果を見る</button>
             </div>
         </div>
     </div>
